pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-302-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/302-lists.md
---
 1. foo
 2. bar

 3. baz
